--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ typings/
 
 # FuseBox cache
 .fusebox/
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/todoListLexa.iml
+.idea/modules.xml
+.idea/misc.xml
