--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.15.0",
